[project]
name = "google_analytics_integration"
authors = [
    { name = "vinay", email = "reddysrivinayofficial@gmail.com"}
]
description = "Google Analytics Integration"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
"google-analytics-data==0.18.16",
"google-auth==1.29.0",
"google-auth-oauthlib==0.4.4"
# frappe is managed by bench and need not be included here.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
